{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 43,
  "lineage": "7db9d6bc-3747-335e-8aac-d98fc4342bd1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fc41e3603f16015",
            "arn": "arn:aws:ec2:us-west-2:533284743282:elastic-ip/eipalloc-02fc41e3603f16015",
            "domain": "vpc",
            "id": "eipalloc-02fc41e3603f16015",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-254-115-2.us-west-2.compute.amazonaws.com",
            "public_ip": "44.254.115.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_nat_eip"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_nat_eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caa91d6b7bee0ed0",
            "arn": "arn:aws:ec2:us-west-2:533284743282:instance/i-04c3ba48c6da93e6f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c3ba48c6da93e6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cs218-anoop-keypair-2-uw2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0390aadda7dcef721",
            "private_dns": "ip-10-0-0-13.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f42e969f408c792",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cfce552afd12984",
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_private_instance"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f602cc777ab313f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caa91d6b7bee0ed0",
            "arn": "arn:aws:ec2:us-west-2:533284743282:instance/i-0143711e2a595e4fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0143711e2a595e4fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cs218-anoop-keypair-2-uw2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085865285f6f318c8",
            "private_dns": "ip-10-0-0-24.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.24",
            "public_dns": "ec2-35-90-75-146.us-west-2.compute.amazonaws.com",
            "public_ip": "35.90.75.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0759cd4bf6044f06d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa9453c240cfb0ef",
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_public_instance"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_public_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba49bf88693225a9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533284743282:internet-gateway/igw-07bdc71a123ec7e27",
            "id": "igw-07bdc71a123ec7e27",
            "owner_id": "533284743282",
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_igw"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_igw"
            },
            "vpc_id": "vpc-08f56853db01373e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fc41e3603f16015",
            "association_id": "eipassoc-082c72f04bead39f9",
            "connectivity_type": "public",
            "id": "nat-0bdca9b5bb108e290",
            "network_interface_id": "eni-060f39681c793d086",
            "private_ip": "10.0.0.29",
            "public_ip": "44.254.115.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aa9453c240cfb0ef",
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_nat_gateway"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_nat_gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533284743282:route-table/rtb-07c2f4593193cd542",
            "id": "rtb-07c2f4593193cd542",
            "owner_id": "533284743282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bdca9b5bb108e290",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_private_rt"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f56853db01373e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533284743282:route-table/rtb-041cf2a20976b5e5e",
            "id": "rtb-041cf2a20976b5e5e",
            "owner_id": "533284743282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bdc71a123ec7e27",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_public_rt"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f56853db01373e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000278509394f1aac",
            "route_table_id": "rtb-07c2f4593193cd542",
            "subnet_id": "subnet-08cfce552afd12984"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2a806bdcbd120d6",
            "route_table_id": "rtb-041cf2a20976b5e5e",
            "subnet_id": "subnet-0aa9453c240cfb0ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533284743282:security-group/sg-00f602cc777ab313f",
            "description": "Allow private instance access via NAT and public SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f602cc777ab313f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba49bf88693225a9"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "venkatanoopkarlapudi_private_sg",
            "name_prefix": "",
            "owner_id": "533284743282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_private_sg"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f56853db01373e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533284743282:security-group/sg-0ba49bf88693225a9",
            "description": "Allow inbound SSH and HTTP for public instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba49bf88693225a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "venkatanoopkarlapudi_public_sg",
            "name_prefix": "",
            "owner_id": "533284743282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_public_sg"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f56853db01373e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533284743282:subnet/subnet-08cfce552afd12984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cfce552afd12984",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533284743282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_private_subnet"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_private_subnet"
            },
            "vpc_id": "vpc-08f56853db01373e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533284743282:subnet/subnet-0aa9453c240cfb0ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa9453c240cfb0ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533284743282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_public_subnet"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_public_subnet"
            },
            "vpc_id": "vpc-08f56853db01373e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533284743282:vpc/vpc-08f56853db01373e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-07453a7f08c1e5fbc",
            "default_route_table_id": "rtb-04db72f49b0494ec8",
            "default_security_group_id": "sg-03fce1f75bb2b2de5",
            "dhcp_options_id": "dopt-0773fde7a86c100ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f56853db01373e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04db72f49b0494ec8",
            "owner_id": "533284743282",
            "tags": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_vpc"
            },
            "tags_all": {
              "Assignment": "Homework3",
              "Class": "cs18",
              "ManagedBy": "Terraform",
              "Name": "venkatanoopkarlapudi_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}